--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <video autoplay muted playsinline controls loop>
-    <source src="WTFHack_v1.mp4" type="video/mp4">
+    <source src="video2.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </body>
