--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
       padding: 0;
       background: black;
       height: 100%;
+      overflow: hidden;
     }
     video {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      display: block;
     }
   </style>
 </head>
